refactor: migrate switch statements to modern switch syntax (Java 14+) (#3191)
* refactor: migrate switch statements to modern switch syntax (Java 14+)

Motivation:
Java 14 introduced enhanced switch statements and switch expressions
with arrow syntax, eliminating fall-through bugs and reducing boilerplate.

Modification:
Convert switch statements to switch expressions and enhanced switch
statements across 9 test files including ActorWithMDC, BidiFlowDocTest,
AuctionCommand, PersistentFsmToTypedMigrationCompileOnlyTest, and
FSM-related test files.

Result:
Cleaner, more concise switch code with no fall-through risk.

* style: apply javafmt to PersistentFsmToTypedMigrationCompileOnlyTest

Apply javafmt to fix code style check failure.